<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#FEFEFE"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".OTPActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/otpImage"
        android:scaleType="centerCrop"
        android:src="@drawable/otp" />

    <TextView
        android:id="@+id/txtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_number"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="22sp"
        android:textStyle="bold|normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/enter_the_otp_to_verify_your_mobile_no"
        android:textAlignment="center"
        android:textSize="13sp"
        android:textStyle="normal" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">


            <com.mukeshsolanki.OtpView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:focusableInTouchMode="true"
                android:inputType="number"
                android:itemBackground="#b6b6b6"
                app:OtpCursorColor="@color/green"
                app:OtpItemCount="6"
                app:OtpLineColor="@color/green"
                app:OtpViewType="line" />

            <Button
                android:id="@+id/btnContinue1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:text="@string/btn_continue"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|normal" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>